[gd_scene load_steps=9 format=3 uid="uid://hwgk002eroac"]

[ext_resource type="Texture2D" uid="uid://bmspdadwfumot" path="res://assets/icon.svg" id="1_5nwje"]
[ext_resource type="Script" uid="uid://cefb6wpr606ya" path="res://entities/enemies/turret_enemy.gd" id="1_l1ivg"]
[ext_resource type="Texture2D" uid="uid://cy3bx0yf2hrh" path="res://assets/bow.png" id="3_82dk7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8txk8"]
radius = 24.083189

[sub_resource type="CircleShape2D" id="CircleShape2D_l1ivg"]
radius = 489.8908

[sub_resource type="CircleShape2D" id="CircleShape2D_82dk7"]
radius = 222.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_82dk7"]
bg_color = Color(0, 0, 0, 0.4627451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8txk8"]
bg_color = Color(0.9764706, 0, 0, 1)

[node name="TurretEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 17
motion_mode = 1
script = ExtResource("1_l1ivg")
speed = 75.0

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
scale = Vector2(0.375, 0.375)
texture = ExtResource("1_5nwje")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(24, 0)
scale = Vector2(-1, -1)
texture = ExtResource("3_82dk7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8txk8")

[node name="DetectionRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
shape = SubResource("CircleShape2D_l1ivg")

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 17

[node name="ProjectileSpawn" type="Marker2D" parent="."]
position = Vector2(25, 0)

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="BackingUpRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackingUpRange"]
shape = SubResource("CircleShape2D_82dk7")

[node name="hp_bar" type="ProgressBar" parent="." groups=["enemy"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -40.0
offset_right = 156.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.375, 0.375)
theme_override_styles/background = SubResource("StyleBoxFlat_82dk7")
theme_override_styles/fill = SubResource("StyleBoxFlat_8txk8")
value = 100.0
show_percentage = false
